[metadata]
name = kyanitctl
description = Command-line utility for Kyanit
url = https://github.com/kyanit-project/kyanitctl
author = Zsolt Nagy
author_email = zsolt@kyanit.eu
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers
    Operating System :: Unix

[options]
packages = kyanitctl
install_requires =
  kyanitapi
python_requires = ~=3.8

[options.entry_points]
console_scripts =
    kyanitctl = kyanitctl:command_line

[bdist_wheel]
universal = True
